# RasterizerHowTo

./: CMakeLists.txt  OBJ_Loader.h  README.md  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  payload.hpp  rasterizer.cpp  rasterizer.hpp  transformation.hpp
